deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: app-deployment
 namespace: default
 labels:
  app: web-app
spec:
 replicas: 2
 selector:
  matchLabels:
  app: web-app
 template:
  metadata:
   labels:
    app: web-app
  spec:
    containers:
    - name: web-container
      image: 556438350842.dkr.ecr.eu-north-1.amazonaws.com/gitops-repo:latest
      ports:
        - containerPort: 5000
      resources:
        requests:
          memory: "128Mi"
          cpu: "100m"
        limits:
          memory: "256Mi"
          cpu: "200m"
